backport to Java 8
Signed-off-by: Alexander Weigl <weigl@kit.edu>